--- a/lab_report_2/bell.tex
+++ b/lab_report_2/bell.tex
@@ -13,7 +13,7 @@ S = \expval{00} + \expval{01}+ \expval{10} - \expval{11}
 \,,
 \end{align}
 %
-where by \(\expval{ij}\) we mean \(\expval{x=i, y=j}\). 
+where by \(\expval{ij}\) we mean the expectation value of the tensor product of the two bases: \(\expval{x=i \otimes y=j}\). 
 
 Classically, it can be shown \cite[]{clauserProposedExperimentTest1969} that \(\abs{S} \leq 2\), while a quantum system can theoretically achieve \(\abs{S} = 2 \sqrt{2} \approx \num{2.82}\). 
 
