--- a/lab_report_2/main.tex
+++ b/lab_report_2/main.tex
@@ -18,7 +18,7 @@ backref=true
 \maketitle
 
 \begin{abstract}
-We use an optical bench set up for the generation and measurement of polarization-entangled photon pairs in order to first violate the Bell inequalities, and then to build a prototype for a Quantum Key Distribution protocol, whose maximum key rate is estimated. 
+We use an optical bench set up for the generation and measurement of polarization-entangled photon pairs in order to first violate the Bell inequalities with \(\abs{S} \approx \num{2.60(2)}\), and then to build a prototype for an entanglement-based Quantum Key Distribution protocol \cite[]{bennettQuantumCryptographyBell1992}, achieving a shared key rate of the order of \SI{100}{bits/s}.
 \end{abstract}
 
 
