--- a/QKD/report_QKD.ipynb
+++ b/QKD/report_QKD.ipynb
@@ -30,6 +30,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part of the lab report for the Quantum Optics exam\n",
+    "# with professors P. Villoresi and G. Vallone\n",
+    "\n",
+    "# Jacopo Tissino\n",
+    "# A.Y. 2019-2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
@@ -54,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
